--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
+
+  <!-- when we apply monoindex.org, add this link-->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1GM8DHTP8Z"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -25,7 +27,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="twitter:image" content="https://index-dao.s3.amazonaws.com/hero.png" />
+    <meta name="twitter:image" content="https://i.gyazo.com/851c2263f6c3e79bf6868d53b601902f.png" />
     <meta name="twitter:description" content="The community led crypto index collective" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Index" />
@@ -38,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Index</title>
+    <title>MonoIndex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
